envoy2.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9902 }

static_resources:
  listeners:
  - name: listener_0
    socket_options:
    - description: enable keep-alive
      int_value: 1
      level: 1
      name: 9
      state: STATE_PREBIND
    - description: idle time before first keep-alive probe is sent
      int_value: 2
      level: 6
      name: 4
      state: STATE_PREBIND
    - description: keep-alive interval
      int_value: 2
      level: 6
      name: 5
      state: STATE_PREBIND
    - description: keep-alive probes count
      int_value: 1
      level: 6
      name: 6
      state: STATE_PREBIND
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          stream_idle_timeout: 500s
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_service_2, timeout: 500s }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: some_service_2
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 6666
